changes for use latest tag from dockerhub downloading sysimages and platform, creating virtual device moved on stage run docker for specified api removed unused code